2006-10-03  Don Allingham  <don@gramps-project.org>
	* src/GrampsLogger/_ErrorReportAssistant.py: capitalize "GRAMPS"
	* src/ViewManager.py: display buttons on first open
	* src/Editors/_EditSourceRef.py: fix cancelling of text (bug #450)
	* src/DisplayTabs/_NoteTab.py: fix cancelling of text
	* src/DisplayTabs/_TextTab.py: fix cancelling of text 


2006-10-02  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: save description properly on read
	* src/RelLib/_Location.py: call parent class properly
	* src/Selectors/_SelectPlace.py: use proper column for place handle
	* src/DisplayModels/_PlaceModel.py: specify place handle

2006-10-01  Don Allingham  <don@gramps-project.org>
	* src/Utils.py: catch divide by zero case
	* src/ViewManager.py: change change to same page (#410)

2006-09-29  Don Allingham  <don@gramps-project.org>
	* src/FilterEditor/_EditRule.py: limit source name in menu display
	to 40 characters (#451)
	* src/GrampsDb/_ReadGedcom.py: Handle the Place/Address combination
	for events

2006-09-28  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PlaceView.py: add street column (bug #459)
	* src/DisplayModels/_PlaceModel.py: add street column
	* src/GrampsDb/_GrampsDbBase.py: add street column

2006-09-27  Brian Matherly  <brian@gramps-project.org>
    * src/ReportBase/_StyleEditor.py: Make style editor not modal
    * src/glade/gramps.glade: Make style editor not modal

2006-09-26  Brian Matherly  <brian@gramps-project.org>
    * src/GrampsLogger/_ErrorReportAssistant.py: Fix typo.

2006-09-25  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: fix message
	* src/Config/_GrampsConfigKeys.py: set default value
	* src/QuestionDialog.py: set value from config
	* data/gramps.schemas.in: fix default value
	* src/GrampsDb/_GrampsDBCallback.py: catch db transaction problem
	* src/GrampsCfg.py: reset PORT_WARN when TRANSACTION re-enabled
	* src/QuestionDialog.py: sync changes to config value